--- a/Rapport1/conclusion.tex
+++ b/Rapport1/conclusion.tex
@@ -4,11 +4,12 @@ merge sort. It was possible to single out a winner among the
 implemented streams, which was found it to be buffered streams with
 2MB of buffer size.
 
-It was found that the implemented external tremendously improved the
+It was found that the implemented external Mergesort tremendously improved the
 performance of sorting large input, compared to conventional main
-memory sorting algorithms -- for sorting 2GB of integer elements, we
+memory sorting algorithms -- for sorting 1GB of integer elements, we
 found a performance increase of a factor\todo{insert impressive
-  facts.}.
+  factor. + ~algoritme + ved 2GB var heap/qsort absurd langsomt}.
 
 The overall findings of this project was therefore in agreement with
 what should be expected from the I/O-model for analyzing algorithms.
+\todo{meget vigtigt med hoejden af traeet (i.e. antallet af I/O)}
