--- a/Rapport1/test_setup.tex
+++ b/Rapport1/test_setup.tex
@@ -14,7 +14,7 @@ Linux 12.04. The hard drive was an USB2 attached Fujitsu MJA2250BH which has the
 \item 250GB
 \item 5,400 RPM
 \item 8MB cache
-\item 512B sector size
+\item 512B sector size\todo{tilfoej readahead}
 \end{itemize}
 
 The file system had a block size of 4096B.
