--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -153,7 +153,7 @@ interest for use in sorting.
 
 
 Figure~\ref{fig:buffered-input} shows a small curve for smaller buffer sizes. We speculate that...
-\todo{data ligger langt fra hinanden vs. den kan lave readahead + data begynder at ligge taet + cache paa disk. Hhm hvordan kan det passe for 8kB?}
+\todo{data ligger langt fra hinanden vs. den kan lave readahead + data begynder at ligge taet + cache paa disk. Hhm hvordan kan det passe for 8kB? Jo tror det er fint det argument med cache}
 
 From Figure~\ref{fig:buffered-input}, it seems that a buffer size of 2
 MB provides the best compromise of running time and memory usage for
