--- a/Rapport1/conclusion.tex
+++ b/Rapport1/conclusion.tex
@@ -4,12 +4,15 @@ merge sort. It was possible to single out a winner among the
 implemented streams, which was found it to be buffered streams with
 2MB of buffer size.
 
-It was found that the implemented external Mergesort tremendously improved the
-performance of sorting large input, compared to conventional main
-memory sorting algorithms -- for sorting 1GB of integer elements, we
-found a performance increase of a factor\todo{insert impressive
-  factor. + ~algoritme + ved 2GB var heap/qsort absurd langsomt}.
+It was found that the implemented external Mergesort tremendously
+improved the performance of sorting large input, compared to
+conventional main memory sorting algorithms -- for sorting 1GB of
+integer elements, we found a performance increase of a factor $\approx
+2.3$, which is significantly bigger for larger inputs.
 
 The overall findings of this project was therefore in agreement with
-what should be expected from the I/O-model for analyzing algorithms.
-\todo{meget vigtigt med hoejden af traeet (i.e. antallet af I/O)}
+what should be expected from the I/O-model for analyzing
+algorithms. Especially our tests varying the parameters for sorting
+shows that I/O is the bottleneck for the running time. We have also
+found a way to choose the parameters, which will minimize the I/O for
+a given input size.
