--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -257,7 +257,7 @@ A similar plot for the mmap output stream is shown at
 Figure~\ref{fig:mmap-output}. For the output stream it seems like the
 different streams behaves alike for different buffer sizes. Like the
 input stream, the performance of the output stream is decreasing for
-larger values of $k$, and no test with $k$ greater than 64 was
+larger values of $k$\todo{Not correct wrt. new measurements.}, and no test with $k$ greater than 64 was
 performed due to long execution times.
 
 \subsection{Other streams}
