--- a/Rapport1/test_setup.tex
+++ b/Rapport1/test_setup.tex
@@ -2,7 +2,7 @@ All measurements presented in this report were performed on a computer
 with an Intel Core i3-380UM CPU with the following technical
 specifications:
 \begin{itemize}
-\item 2 cores operating at 1.33GHz
+\item 2 cores w/HT operating at 1.33GHz
 \item 2 x 32KB L1 data cache
 \item 2 x 256 KB L2 cache
 \item Shared 3MB L3 cache
