--- a/Rapport1/conclusion.tex
+++ b/Rapport1/conclusion.tex
@@ -1,14 +1,14 @@
 In the course of the project, four different stream implementations
 have been made and tested with an eye to the application of external
-merge sort. It was possible to single out a winner among the
+mergesort. It was possible to single out a winner among the
 implemented streams, which was found it to be buffered streams with
-2MB of buffer size.
+2MB buffer size.
 
-It was found that the implemented external Mergesort tremendously
+It was found that the implemented external mergesort tremendously
 improved the performance of sorting large input, compared to
 conventional main memory sorting algorithms -- for sorting 1GB of
 integer elements, we found a performance increase of a factor $\approx
-2.3$, which is significantly bigger for larger inputs.
+2.3$, which becomes significantly bigger for larger inputs.
 
 The overall findings of this project was therefore in agreement with
 what should be expected from the I/O-model for analyzing
