--- a/Rapport1/introduction.tex
+++ b/Rapport1/introduction.tex
@@ -1,1 +1,1 @@
-In this report we will discuss how we implemented and benchmarked the four different streams from the project description. We will then use the best stream in external Mergesort. Different parameters will be examined in order to optimize the running of sorting and for comparison with in-memory sorting algorithms.
+In this report we will discuss how we implemented and benchmarked the four different streams from the project description. We will then use the best stream in external mergesort. Different parameters will be examined in order to optimize the running time of sorting and for comparison with in-memory sorting algorithms.
