--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -21,7 +21,7 @@
 
 \begin{document}
 
-\title{IO\\Project 1}
+\title{I/O-algorithms\\Project 1}
 
 \author{Lasse Espeholt - 20093223\\
 Kasper Nielsen - 20091182\\}
@@ -34,7 +34,8 @@ Kasper Nielsen - 20091182\\}
 
 \vfill{}
 \begin{description}
-\item [{Implementation~code~and~test~results:}]
+\item [{Implementation~code~and~test~results:}]~
+\\
 \texttt{\url{https://github.com/kasper0406/IO13/tree/master/Project1/}}
 \end{description}
 \pagebreak{}\tableofcontents{}\pagebreak{}
@@ -54,8 +55,8 @@ The following is a description of the different folders available at
 \\
 \texttt{\url{https://github.com/kasper0406/IO13/tree/master/Project1/}}
 \begin{description}
-\item[/] Contains the implementations of the different streams and
-  the external memory sort.
+\item[root] Contains the implementations of the different streams and
+  the external mergesort.
 
 \item[measurements/] Contains the raw measurements used for the plots in the
   report. The plots themselves are also included in a pdf-format.
@@ -102,15 +103,15 @@ The code has the following source files:
 
 \section{Streams}
 This section presents how benchmarks of the four different
-streams were performed, and contains an analysis of their performance. First each stream will
+streams were performed, and also contains an analysis of their performance. First each stream will
 be treated separately and the best settings for each stream will be
 used in a relative performance benchmark for finding the stream most
 suitable for sorting.
 
-In order to mimic the behaviour of sorting during the test, we have
+In order to mimic the behaviour of sorting during the test, we
 tested the streams in respectively reading/writing $N$ elements from/to a file. Each test uses $k$ interleaved streams, such
 that a new stream is starting at every $\frac{N}{k}$ elements, and
-elements are being processed in a round robin fashion of the streams.
+elements are being processed in a round robin fashion.
 
 All tests of the streams have used $N = 2^{28}$, which corresponds to
 1GB of elements. This choice was made to make sure the data could not be hold in memory in its entirety, and still small enough to be able to run all the tests within reasonably time. The
@@ -118,7 +119,7 @@ number of elements has not been varied for the stream test, as it is not
 expected that streams will behave differently, as long as the data is
 big enough to not fit the main memory.
 
-In the merge step of the sorting application, the input streams are
+In the merge step of external mergesort, the input streams are
 used similarly as in the experiments. However, the output streams are only used
 as in the $k = 1$ case, but we have chosen to do testing of these streams
 for varying values of $k$, to be able to get comparable results
@@ -155,14 +156,12 @@ interest for use in sorting.
 
 Figure~\ref{fig:buffered-input} shows a small curve for smaller buffer
 sizes. As $k$ increases, more disk seeking is required, but when $k$
-becomes large, the $k$ different streams is close to each other,
-especially because of read-ahead of 128kB per stream.
+becomes large, the data of the $k$ different streams is close to each other,
+especially because of 128kB read ahead per stream.
 
-An experiment was performed to check this hypothesis, where we tried
-to change how much read-ahead to
-perform. Figure~\ref{fig:buffered-readahead} shows a plot of the
+An experiment was performed to check this hypothesis, where we reduced the amount of read ahead to 64kB. Figure~\ref{fig:buffered-readahead} shows a plot of the
 results. It is seen that the curve is skewed compared to before. This
-provides evidence that read-ahead has an effect when $k$ is large. For
+provides evidence that read ahead has an effect when $k$ is large. For
 smaller $k$ values the performance seems almost the same, which we
 speculate is due to the look-ahead done by the disk controller. This
 only works for small $k$, because of a limited cache on the disk
@@ -171,7 +170,7 @@ controller.
 \begin{figure}
   \centering
   \includegraphics[width=0.8\textwidth]{buffered_input_rd}
-  \caption{Effect on changing the read-ahead value for buffered input
+  \caption{Effect on changing the read ahead value for buffered input
     stream with a 2MB buffer.}
   \label{fig:buffered-readahead}
 \end{figure}
@@ -195,35 +194,29 @@ We expected that the plots in Figure~\ref{fig:buffered-input} and
 Figure~\ref{fig:buffered-output} would be similar since the two streams
 are much alike. However, the plots shows that the varying the buffer sizes
 almost have no effect on the performance of the output streams, except
-when they are too big to be in memory. Comparing with buffered input streams we see a large decrease in performance earlier with buffered write. We believe it is due to a large write buffer in the operating system to facilitate asynchronous write. Therefore, less memory is available for the output streams.
-
-The disk controller has the choice of delaying writes to the disk platters by using its 8MB cache and wait until it receives more data in the same region of the disk. It thereby avoids random seeks. This could explain why varying buffer sizes performs equally.
+when they are too big to be in memory. Comparing with buffered input streams we see the large decrease in performance earlier with buffered output streams. We believe it is due to a large write buffer in the operating system to facilitate asynchronous write. Therefore, less memory is available for the output streams.
+Furthermore, the disk controller has the choice of delaying writes to the disk platters by using its 8MB cache and wait until it receives more data in the same region of the disk. It thereby avoids random seeks. This could explain why varying buffer sizes performs equally.
 
 An experiment was performed, where the
 \texttt{fsync}\footnote{The \texttt{fsync} system call ensures
-  that the file is written to disk immediately.} system call was
+  that the file is written to disk immediately and also flushes the cache in the disk controller.} system call was
 called immediately after each write operation. It was found that both
 the input and output streams performed very similar, hence the absence
 of effect in varying buffer sizes showed in
-Figure~\ref{fig:buffered-output} can be explained by the write cache of the disk.
+Figure~\ref{fig:buffered-output} can be explained by the write cache.
 \\
 \\
 A buffer size of 2 MB has been chosen to give the best trade-off
-between running time and memory consumption. From
-Figure~\ref{fig:buffered-output} it seems like a tiny buffer would be
-a better choice but for external mergesort only $k=1$ is used. Therefore, we choose to base our choice on the performance of the input streams.
+between running time and memory consumption.
 
 \subsection{MMap streams}
 For the memory mapped streams, the \texttt{mmap} and \texttt{munmap}
 system calls are used for mapping a file into memory. Then the file
-can be accessed as it was loaded into memory, but the actual loading
+can be accessed as it was in memory, but the actual loading
 is lazy, such that it only happens when it is needed.
 Therefore it is expected that the block size mapped into memory each
-time \texttt{mmap} is called, will not have any significant impact on
-the results, since only some memory bookkeeping and different amount
-of remapping is required when using different block sizes. This
-however, should be negligible compared to the time of the actual disk
-access.
+time \texttt{mmap} is called will not have any significant impact on
+the results, since only some additional bookkeeping and remapping is required when using different block sizes.
 
 \begin{figure}[h!]
   \centering
@@ -234,7 +227,7 @@ access.
 \end{figure}
 
 Figure~\ref{fig:mmap-input} shows a plot of the running times for the
-memory mapped input stream. Except for the case $k = 256$, the plot shows
+memory mapped input stream. Except for $k = 256$, the plot shows
 that the running times for the different block sizes are very close,
 which is expected. For the $k = 256$ case, it seems like some choices
 of block sizes are better than others, but there does not seem to be an
@@ -253,7 +246,7 @@ A similar plot for the mmap output stream is shown at
 Figure~\ref{fig:mmap-output}. For the output stream it seems like the
 different streams behaves alike for different buffer sizes. Like the
 input stream, the performance of the output stream is decreasing for
-increasing $k$. However, for $k=256$ which we do not fully understand but we believe it is due to the synchronization algorithm underlying memory mapped files.
+increasing $k$. However, for $k=256$ we see a decrease in performance which we do not fully understand, but we believe it is due to the synchronization algorithm underlying memory mapped files.
 
 \subsection{Other streams}
 \label{sec:other-streams}
@@ -274,7 +267,7 @@ kB. Figure~\ref{fig:fstreams} shows a plot of their performance.
 \end{figure}
 
 Comparing Figure~\ref{fig:fstreams} to our buffered streams, they show
-a very similar behaviour. This is as expected, since the streams
+a very similar behaviour. This is as expected since the streams
 should function in exactly the same way.
 
 We will now turn our attention to the streams using the \texttt{read}
@@ -297,9 +290,9 @@ seen, which we believe to be due to cache constraints for look-ahead.
 As mentioned earlier, only one measurement was done for the output
 stream. It is a bit surprising that the output stream is so much
 slower than the input stream. The smallest unit able to be written to
-the disk is a sector, which on the test machine is 512B.  We have made experiments that indicates writing to disk is delayed until 512B have been
-written, while for reading we have read-ahead which is larger than 512B (128kB), which can explain the
-slow behaviour of writing.
+the disk is a sector, which on the test machine is 512B.  We have made experiments that indicates writing to disk is delayed until at least 512B have been
+written. For reading we have read ahead which is larger than 512B (128kB), which can explain the
+low writing performance.
 
 \subsection{Relative comparison}
 In order to determine which stream to use, it is very important that
@@ -335,7 +328,7 @@ the buffered output stream with 2MB buffer. As discussed in
 Section~\ref{sec:other-streams} the streams are functioning in almost
 the same way, except they use a different buffer size.
 
-We choose the 2MB buffered output stream since we also choose the corresponding buffered input stream. As indicated by Figure~\ref{fig:best-output} it might have been a better choice to pick a smaller buffer size. Due to time constraints we did not experiments with a smaller buffer size.
+We choose the 2MB buffered output stream since we also choose the corresponding buffered input stream. As indicated by Figure~\ref{fig:best-output} it might have been a better choice to pick a smaller buffer size. Due to time constraints we did not experiment with a smaller buffer size for the output stream.
 
 \begin{figure}[h!]
   \centering
@@ -349,7 +342,7 @@ We choose the 2MB buffered output stream since we also choose the corresponding 
 This section will investigate how the external memory mergesort
 performs for different choices of parameters. Given the input size
 $N$, the algorithm has two parameters to tweak: The memory size $M$,
-and the number, $k$, of input streams to merge simultaneously.
+and the number of input streams to merge simultaneously ($k$).
 
 There are some constraints on these parameters. It does not make sense
 to have $M$ bigger than the actual memory size, since this corresponds
@@ -371,7 +364,7 @@ Figure~\ref{fig:sorting} follows this bound very nicely.
 There are small variations for the running time of each level, but
 these seems almost negligible in the overall picture. This also
 suggests that the assumption of the I/O model, where only disk
-accesses are the thing to count, indeed seems to be a good model in
+accesses are counted, indeed seems to be a good model in
 practice when the input does not fit into main memory.
 
 For a given choice of parameters, the amount of memory used to sort
@@ -382,10 +375,10 @@ parameters: First the height of the merge tree should be minimized,
 then the amount of used memory. There will be some cases where the
 minimum height merge tree is not the best thing to choose, since the
 parameters obtaining this may not fit the memory of the machine. This
-is seen for $M = 2$ and $k \geq 256$ in Figure~\ref{fig:sorting}.
+is seen for $M = 2$MB and $k \geq 256$ in Figure~\ref{fig:sorting}.
 
 When sorting 1GB of integers, we have found parameters $M = 32\textrm{MB}, k =
-32$ and $M = 64\textrm{MB}, k = 64$ to be the ones using less memory, both using 96MB and simultaneously with the minimum tree height.
+32$ and $M = 64\textrm{MB}, k = 64$ to be the ones using less memory (96MB) and also minimizing the height of the merge tree.
 
 \begin{figure}[h!]
   \centering
@@ -400,7 +393,7 @@ In order to determine how well the external mergesort is performing,
 it has been benchmarked against conventional quicksort and heapsort
 implementations. The quicksort is from the C standard library, and
 the heapsort is from STL. A plot of the running time for the
-different sorting algorithms is shown in Figure~\ref{fig:best-sort}.
+different sorting algorithms is shown in Figure~\ref{fig:best-sort}. Notice that benchmarks of heapsort after $2^28$ elements and quicksort after $2^29$ elements was halted due to long execution time.
 
 \begin{figure}[h!]
   \centering
@@ -412,13 +405,13 @@ different sorting algorithms is shown in Figure~\ref{fig:best-sort}.
 It can be seen that both quicksort and heapsort outperforms the
 external mergesort when $n \leq 2^{27}$, which is 512MB of
 elements. This is no surprise, since both quick and heapsort are
-in-place sorts. The test machine was equipped with 1GB memory, hence
+in-memory sorting algorithms. The test machine was equipped with 1GB memory, hence
 the two sorting algorithms can do everything without going to disk,
 while the external mergesort by construction have to do merging on
 the disk.
 
 The other thing to notice, is that as soon as the input does not fit
-the memory anymore $n \geq 2^{28}$ (1GB of elements), the external
+the in memory anymore ($n \geq 2^{28}$, 1GB of elements), the external
 mergesort beats the quicksort and heapsort hands down. This was also
 what we expected, since the external mergesort should use the disk
 much more efficiently.
