--- a/Rapport1/rapport.tex
+++ b/Rapport1/rapport.tex
@@ -393,7 +393,7 @@ In order to determine how well the external mergesort is performing,
 it has been benchmarked against conventional quicksort and heapsort
 implementations. The quicksort is from the C standard library, and
 the heapsort is from STL. A plot of the running time for the
-different sorting algorithms is shown in Figure~\ref{fig:best-sort}. Notice that benchmarks of heapsort after $2^28$ elements and quicksort after $2^29$ elements was halted due to long execution time.
+different sorting algorithms is shown in Figure~\ref{fig:best-sort}. Notice that benchmarks of heapsort after $2^{28}$ elements and quicksort after $2^{29}$ elements was halted due to long execution time.
 
 \begin{figure}[h!]
   \centering
